--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,8 +52,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/fonts/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -64,10 +65,20 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: LibreFranklin
+      fonts:
+        - asset: assets/fonts/LibreFranklin-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/LibreFranklin-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/LibreFranklin-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/LibreFranklin-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/LibreFranklin-Light.ttf 
+          weight: 300
+
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
