--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   auto_route: ^7.8.4
   cupertino_icons: ^1.0.2
+  device_preview: ^1.1.0
+  flutter_screenutil: ^5.9.0
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.4.9
@@ -76,9 +78,8 @@ flutter:
           weight: 500
         - asset: assets/fonts/LibreFranklin-Regular.ttf
           weight: 400
-        - asset: assets/fonts/LibreFranklin-Light.ttf 
+        - asset: assets/fonts/LibreFranklin-Light.ttf
           weight: 300
-
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
