--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,12 @@ dependencies:
   auto_route: ^7.8.4
   cupertino_icons: ^1.0.2
   device_preview: ^1.1.0
-  flutter_screenutil: ^5.9.0
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.4.9
+  flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.9
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   auto_route_generator: ^7.3.2
