--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,8 @@ dependencies:
   flutter_riverpod: ^2.4.9
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.9
+  google_nav_bar: ^5.0.6
   shared_preferences: ^2.2.2
-
 
 dev_dependencies:
   auto_route_generator: ^7.3.2
