--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dev_dependencies:
   auto_route_generator: ^7.3.2
   build_runner: ^2.4.7
   flutter_lints: ^2.0.0
+  lint: ^2.3.0
+  riverpod_lint: ^2.3.7
+  custom_lint: ^0.5.8
   flutter_test:
     sdk: flutter
 
