--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,11 @@ dependencies:
   device_preview: ^1.1.0
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^10.7.0
   flutter_riverpod: ^2.4.9
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.9
-  google_nav_bar: ^5.0.6
   shared_preferences: ^2.2.2
-
 dev_dependencies:
   auto_route_generator: ^7.3.2
   build_runner: ^2.4.7
