--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,20 +33,21 @@ dependencies:
   device_preview: ^1.1.0
   flutter:
     sdk: flutter
-  font_awesome_flutter: ^10.7.0
+  flutter_map: ^6.1.0
   flutter_riverpod: ^2.4.9
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.9
+  font_awesome_flutter: ^10.7.0
   shared_preferences: ^2.2.2
 dev_dependencies:
   auto_route_generator: ^7.3.2
   build_runner: ^2.4.7
-  flutter_lints: ^2.0.0
-  lint: ^2.3.0
-  riverpod_lint: ^2.3.7
   custom_lint: ^0.5.8
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  lint: ^2.3.0
+  riverpod_lint: ^2.3.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
