--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,12 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_map: ^6.1.0
+  flutter_map_cancellable_tile_provider: ^2.0.0
   flutter_riverpod: ^2.4.9
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.9
   font_awesome_flutter: ^10.7.0
+  latlong2: ^0.9.0
   shared_preferences: ^2.2.2
 dev_dependencies:
   auto_route_generator: ^7.3.2
