--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^2.0.9
   font_awesome_flutter: ^10.7.0
   latlong2: ^0.9.0
+  location: ^5.0.3
   shared_preferences: ^2.2.2
 dev_dependencies:
   auto_route_generator: ^7.3.2
