--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,14 @@ dependencies:
   auto_route: ^7.8.4
   cupertino_icons: ^1.0.2
   device_preview: ^1.1.0
+  dio: ^5.4.2+1
   flutter:
     sdk: flutter
   flutter_map: ^6.1.0
   flutter_map_cancellable_tile_provider: ^2.0.0
   flutter_riverpod: ^2.4.9
   flutter_screenutil: ^5.9.0
+  flutter_secure_storage: ^9.0.0
   flutter_svg: ^2.0.9
   font_awesome_flutter: ^10.7.0
   latlong2: ^0.9.0
